force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c.object
<CustomObject>
    <fields>
        <fullName>CHANNEL_ORDERS__Allow_Auto_Renew_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables/Disables the Partner to Override the Contract Auto Renew field value.</description>
        <label>Allow Auto Renew Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Allow_Cancellation_Terms_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables/Disables the Partner to Override the Cancellation Terms field value.</description>
        <label>Allow Cancellation Terms Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Allow_Contract_Length_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables/Disables the Partner to Override the Contract Length field value.</description>
        <label>Allow Contract Length Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Allow_Renewal_Length_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables/Disables the Partner to Override the Renewal Terms field value.</description>
        <label>Allow Renewal Length Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Application__c</fullName>
        <description>Name of the Application record for this Product Catalog.</description>
        <label>Application</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Billing_Frequency__c</fullName>
        <description>Controls the frequency in which this Product is Billed, unit is Months.</description>
        <label>Billing Frequency</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Cancellation_Terms__c</fullName>
        <description>Controls the Cancellation time for this Product, unit is Days.</description>
        <label>Cancellation Terms (Days)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Contract_Auto_Renew__c</fullName>
        <description>Controls if a contract for this product is Auto Renewed or not.</description>
        <label>Contract Auto Renew</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Contract_Length__c</fullName>
        <description>Controls the length of a contract for this Product, unit is Months.</description>
        <label>Contract Length</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Custom_Unit__c</fullName>
        <description>Represents the custom unit value when Pricing Unit is set to &apos;Custom&apos;.</description>
        <label>Custom Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Fixed_Price__c</fullName>
        <label>Fixed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Floor_Price__c</fullName>
        <label>Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__PNR__c</fullName>
        <label>PNR %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Partner_Application_Name__c</fullName>
        <label>Partner Application Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Partner_Contract_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Contract Terms</label>
        <referenceTo>CHANNEL_ORDERS__Partner_Contract_Terms__c</referenceTo>
        <relationshipLabel>Partner Product Catalog</relationshipLabel>
        <relationshipName>Partner_Product_Catalog</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Partner_Price_Book_Entry_Id__c</fullName>
        <description>Price Book Entry Id reference on Org62</description>
        <formula>CHANNEL_ORDERS__Standard_Partner_Pricebook_Entry__r.CHANNEL_ORDERS__Pricebook_Entry_Id__c</formula>
        <inlineHelpText>Product Name of Price Book Entry on Org62</inlineHelpText>
        <label>Partner Price Book Entry Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Partner_Product_Name__c</fullName>
        <description>Product Name of Price Book Entry on Org62</description>
        <formula>CHANNEL_ORDERS__Standard_Partner_Pricebook_Entry__r.CHANNEL_ORDERS__Product_Name__c</formula>
        <inlineHelpText>Product Name of Price Book Entry on Org62</inlineHelpText>
        <label>Partner Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Pricing_Type__c</fullName>
        <label>Pricing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PNR</fullName>
                </value>
                <value>
                    <fullName>FIXED</fullName>
                </value>
                <value>
                    <fullName>LIST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Pricing_Unit__c</fullName>
        <description>Represents the unit used by the Partner to sell this product.</description>
        <label>Pricing Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Org</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Product_Description__c</fullName>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Product_ID__c</fullName>
        <label>Product ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Product_Special_Terms__c</fullName>
        <label>Product Special Terms</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Renewal_Terms__c</fullName>
        <description>Represents the length of a renewed contract for this product, unit is Months.</description>
        <label>Renewal Terms (Months)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Standard_Partner_Pricebook_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The standard partner pricebook entry.</description>
        <label>Standard Partner Pricebook Entry</label>
        <referenceTo>CHANNEL_ORDERS__Partner_Pricebook_Entry__c</referenceTo>
        <relationshipLabel>Partner Product Catalog</relationshipLabel>
        <relationshipName>Partner_Product_Catalog</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Retired (Add-ons Only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Unit_Price_Formula__c</fullName>
        <formula>IF(TEXT(CHANNEL_ORDERS__Pricing_Type__c) == &apos;FIXED&apos;,  TEXT(CHANNEL_ORDERS__Fixed_Price__c), $Label.channel_orders__coa_unitprice_multiple)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price</label>
        <type>Text</type>
    </fields>
    <label>Partner Product Catalog</label>
    <listViews>
        <fullName>CHANNEL_ORDERS__All</fullName>
        <columns>NAME</columns>
        <columns>CHANNEL_ORDERS__Partner_Contract_Terms__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CHANNEL_ORDERS__COA_Product_View</fullName>
        <columns>NAME</columns>
        <columns>CHANNEL_ORDERS__Unit_Price_Formula__c</columns>
        <columns>CHANNEL_ORDERS__Pricing_Unit__c</columns>
        <columns>CHANNEL_ORDERS__Partner_Product_Name__c</columns>
        <columns>CHANNEL_ORDERS__Partner_Price_Book_Entry_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>COA Product View</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Product Catalog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Fixed_Price_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(CHANNEL_ORDERS__Pricing_Type__c ,&quot;FIXED&quot;),ISNULL(  CHANNEL_ORDERS__Fixed_Price__c ))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Fixed_Price__c</errorDisplayField>
        <errorMessage>Fixed Price is required if Pricing Type = FIXED</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Fixed_Price_should_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(CHANNEL_ORDERS__Pricing_Type__c ,&quot;PNR&quot;),not(ISNULL( CHANNEL_ORDERS__Fixed_Price__c) ))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Fixed_Price__c</errorDisplayField>
        <errorMessage>Fixed Price must be blank if Pricing Type = PNR</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Floor_price_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(CHANNEL_ORDERS__Pricing_Type__c ,&quot;PNR&quot;),ISNULL( CHANNEL_ORDERS__Floor_Price__c ))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Floor_Price__c</errorDisplayField>
        <errorMessage>Floor Price is required if Pricing Type = PNR</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__PNR_percent_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(CHANNEL_ORDERS__Pricing_Type__c ,&quot;PNR&quot;),ISNULL( CHANNEL_ORDERS__PNR__c ))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__PNR__c</errorDisplayField>
        <errorMessage>PNR % is required if Pricing Type = PNR</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__PNR_percent_should_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(CHANNEL_ORDERS__Pricing_Type__c ,&quot;FIXED&quot;),not(ISNULL( CHANNEL_ORDERS__PNR__c) ))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__PNR__c</errorDisplayField>
        <errorMessage>PNR % must be blank if Pricing Type = FIXED</errorMessage>
    </validationRules>
</CustomObject>